--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,9 @@
     <meta name="author" content="Gilang" />
     <meta property="og:title" content="Gilang Dev | Web Developer" />
     <meta property="og:description" content="Portofolio modern, responsif, dan profesional milik Gilang." />
-    <meta property="og:image" content="/logo.png" />
-    <meta property="og:type" content="website" />
+    <meta property="og:image" content="./logo.png" />
     <title>Gilang Dev | Web Developer</title>
-    <link rel="icon" type="image/png" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="./favicon.ico" />
   </head>
   <body class="bg-gray-50 dark:bg-gray-900 text-gray-900 dark:text-gray-100">
     <div id="root"></div>
