--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio Website</title>
-  </head>
-  <body>
+    <meta name="description" content="Portofolio Gilang - Web Developer modern dan profesional." />
+    <meta name="keywords" content="React, Web Developer, Tailwind, Portfolio, Frontend" />
+    <meta name="author" content="Gilang" />
+    <meta property="og:title" content="Gilang Dev | Web Developer" />
+    <meta property="og:description" content="Portofolio modern, responsif, dan profesional milik Gilang." />
+    <meta property="og:image" content="./logo.png" />
+    <title>Gilang Dev | Web Developer</title>
+    <link rel="icon" type="image/png" href="./favicon.ico" />
+</head>
+<body class="bg-gray-50 dark:bg-gray-900 text-gray-900 dark:text-gray-100">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-
-  </body>
+</body>
 </html>
