--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="description" content="Portofolio Gilang - Web Developer modern dan profesional." />
     <meta name="keywords" content="React, Web Developer, Tailwind, Portfolio, Frontend" />
     <meta name="author" content="Gilang" />
