--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <meta http-equiv="Expires" content="0" />
     <title>Gilang Dev | Web Developer</title>
     <link rel="icon" type="image/png" href="./favicon.ico" />
-  <script type="module" crossorigin src="/Portfolio/assets/index.DQv24eJY.js"></script>
-  <link rel="stylesheet" crossorigin href="/Portfolio/assets/index.HGm5DRn5.css">
+  <script type="module" crossorigin src="./assets/index.DQv24eJY.js"></script>
+  <link rel="stylesheet" crossorigin href="./assets/index.HGm5DRn5.css">
 </head>
 <body class="bg-gray-50 dark:bg-gray-900 text-gray-900 dark:text-gray-100">
     <div id="root"></div>
