--- a/index.html
+++ b/index.html
@@ -18,13 +18,21 @@
   <link rel="stylesheet" crossorigin href="./assets/index.HGm5DRn5.css">
 </head>
 <body class="bg-gray-50 dark:bg-gray-900 text-gray-900 dark:text-gray-100">
-    <div id="root"></div>
+    <div id="root">
+        <div style="text-align: center; padding: 50px;">
+            <h1>Loading Portfolio...</h1>
+            <p>If this message stays for more than a few seconds, there might be an error.</p>
+        </div>
+    </div>
     <script>
         console.log('Script loading started');
         window.onerror = function(message, source, lineno, colno, error) {
             console.error('Global error:', message, source, lineno, colno, error);
             document.body.innerHTML += '<div style="position:fixed;top:0;left:0;background:red;color:white;padding:10px;z-index:9999;">Error: ' + message + '</div>';
         };
+        
+        // Log when script starts loading
+        console.log('Main script tag about to load');
     </script>
 </body>
 </html>
