--- a/404.html
+++ b/404.html
@@ -2,26 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Redirecting to Portfolio</title>
+    <title>Portfolio - Redirecting</title>
     <script>
-      // Single Page Apps for GitHub Pages
-      // MIT License
-      // https://github.com/rafgraph/spa-github-pages
-      // This script takes the current url and converts the path and query
-      // string into just a query string, and then redirects the browser
-      // to the new url with only a query string and hash fragment,
-      // e.g. https://fatahgilang.github.io/Portfolio/one/two?a=b&c=d#qwe, becomes
-      // https://fatahgilang.github.io/Portfolio/?p=/one/two&q=a=b~and~c=d#qwe
-      var l = window.location;
-      var q = {};
-      var p = l.pathname.substring('/Portfolio/'.length);
-      if (p) q.p = p;
-      if (l.search) q.q = l.search.slice(1);
-      if (l.hash) q.f = l.hash.slice(1);
-      var qs = Object.keys(q).map(function(k){return encodeURIComponent(k)+'='+encodeURIComponent(q[k])}).join('&');
-      l.replace(l.origin+'/Portfolio/'+(qs ? '?'+qs : ''));
+      // Redirect to the main page
+      window.location.replace('/Portfolio/');
     </script>
   </head>
   <body>
+    <p>If you are not redirected automatically, follow this <a href="/Portfolio/">link to the portfolio</a>.</p>
   </body>
 </html>
