--- a/index.html
+++ b/index.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gilang Dev | Web Developer</title>
+    <style>
+      #loading {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: #f3f4f6;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: sans-serif;
+        z-index: 9999;
+      }
+      .dark #loading {
+        background: #111827;
+        color: white;
+      }
+      #loading.hidden {
+        display: none;
+      }
+    </style>
   </head>
   <body>
+    <div id="loading">Loading portfolio...</div>
     <div id="root"></div>
+    <script>
+      // Hide loading when app is ready
+      window.addEventListener('load', function() {
+        setTimeout(function() {
+          document.getElementById('loading').classList.add('hidden');
+        }, 500);
+      });
+    </script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
