fix error blank

--- a/public/404.html
+++ b/public/404.html
@@ -5,10 +5,10 @@
     <title>Portfolio - Redirecting</title>
     <script>
       // Redirect to the main page
-      window.location.replace('./');
+      window.location.replace('/Portfolio/');
     </script>
   </head>
   <body>
-    <p>If you are not redirected automatically, follow this <a href="./">link to the portfolio</a>.</p>
+    <p>If you are not redirected automatically, follow this <a href="/Portfolio/">link to the portfolio</a>.</p>
   </body>
 </html>
